--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,16 +1,32 @@
 <div class="col-md-12">
   <div class="text-right">
     <% if current_user.is_admin? %>
-      <%= link_to('Admin', '#') %>
+      <%= link_to('Home', root_path) %>
     <% end %>
 
     <% if user_signed_in? %>
       <%= link_to('Logout', destroy_user_session_path, method: :delete) %>
     <% end %>
   </div>
-    <p>
-      Thanks for registering. We will let you know once our product is ready
-    </p>
 </div>
 
 
+
+<%= form_tag search_organizations_path, method: :get do  %>
+    <div class="field1">
+      <%= text_field_tag :org_name, {placeholder: "Org Name"}%>
+    </div>
+    <div class="field1">
+      <%= select_tag :user_id, options_for_select(User.all.map { |u| [u.email, u.id] }.sort, params[:user_id]), {prompt: "Select Email"} %>
+    </div>
+    <div class="field1">
+      <%= text_field_tag :country, {placeholder: "Country"}%>
+    </div>
+    <div class="actions">
+      <%= submit_tag "Search", class: "btn btn-success btn-sm"  %>
+      <%= link_to "Reset", organizations_path, class: "btn btn-danger btn-sm"%>
+    </div>
+  <% end %>
+<div >
+
+  </div>
