--- a/app/views/organizations/index.html.erb
+++ b/app/views/organizations/index.html.erb
@@ -1,1 +1,56 @@
-sdfkjnvjfkvb
+<div class="col-md-12">
+  <div class="text-right">
+    <% if current_user.is_admin? %>
+      <%= link_to('Home', root_path) %>
+    <% end %>
+
+    <% if user_signed_in? %>
+      <%= link_to('Logout', destroy_user_session_path, method: :delete) %>
+    <% end %>
+  </div>
+</div>
+
+<%= form_tag search_organizations_path, method: :get do  %>
+<div class="row">
+    <div class="col-md-2">
+      <%= select_tag :page, options_for_select(Organization::paginations, params[:page]) %>
+    </div>
+    <div class="col-md-2">
+      <%= text_field_tag :org_name, nil, placeholder: "Org Name"%>
+    </div>
+    <div class="col-md-2">
+      <%= select_tag :user_id, options_for_select(User.all.map { |u| [u.email, u.id] }.sort, params[:user_id]), {prompt: "Select Email"} %>
+    </div>
+    <div class="col-md-2">
+      <%= text_field_tag :country, nil, {placeholder: "Country"}%>
+    </div>
+    <div class="col-md-2">
+      <%= submit_tag "Search", class: "btn btn-success btn-sm"  %>
+      <%= link_to "Reset", organizations_path, class: "btn btn-danger btn-sm"%>
+    </div>
+  <% end %>
+</div>
+<div >
+  <table class="table  table-striped table-bordered table-hover" id="">
+    <thead>
+      <tr>
+        <th>ID</th>
+        <th>ORG NAME</th>
+        <th>ORG IDENTIFIER</th>
+        <th>CREATED BY</th>
+        <th>COUNTRY</th>
+      </tr>
+    </thead>
+    <tbody>
+        <% @organizations.each do |organization| %>
+          <tr class="odd gradeX">
+          <td><%= organization.id%></td>
+          <td><%= organization.org_name%></td>
+          <td><%= organization.org_identifier%></td>
+          <td><%= organization.user.email%></td>
+          <td><%=organization.address.country%></td>
+          </tr>
+        <% end %>
+    </tbody>
+  </table>
+</div>
