--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -24,3 +24,4 @@
     padding: 5px;
     font-size: 13px;}
 .custom_filed input.search_btn{width:auto; background:green}
+.hidden{visibility: hidden;}
