--- a/app/views/organizations/index.html.erb
+++ b/app/views/organizations/index.html.erb
@@ -10,53 +10,26 @@
   </div>
 </div>
 
-<%= form_tag search_organizations_path, method: :get do  %>
+<%= form_tag search_organizations_path, method: :get, remote: true, id: "search_form" do  %>
 <div class="row">
-    <div class="col-md-2 custom_filed">
-      <%= select_tag :page_length, options_for_select([[10, 10], [20, 20], [30, 30]], params[:page_length]), {prompt: "Page Length"} %>
-    </div>
-    <div class="col-md-2 custom_filed">
+    <!-- <div class="col-md-2 custom_filed">
+      <%#= select_tag :page_length, options_for_select([[10, 10], [20, 20], [30, 30]], params[:page_length]), {prompt: "Page Length"} %>
+    </div> -->
+    <div class="col-md-3 custom_filed">
       <%= text_field_tag :org_name, nil, placeholder: "Org Name"%>
     </div>
-    <div class="col-md-2 custom_filed">
+    <div class="col-md-3 custom_filed">
       <%= select_tag :user_id, options_for_select(User.all.map { |u| [u.email, u.id] }.sort, params[:user_id]), {prompt: "Select Email"} %>
     </div>
-    <div class="col-md-2 custom_filed">
+    <div class="col-md-3 custom_filed">
       <%= text_field_tag :country, nil, {placeholder: "Country"}%>
     </div>
-    <div class="col-md-2 custom_filed">
-      <%= submit_tag "Search", class: "btn btn-success btn-sm search_btn"  %>
+    <div class="col-md-3 custom_filed">
+      <%= submit_tag "Search", class: "btn btn-success btn-sm search_btn" %>
       <%= link_to "Reset", organizations_path, class: "btn btn-danger btn-sm"%>
     </div>
   <% end %>
 </div>
-<div >
-  <table class="table  table-striped table-bordered table-hover" id="">
-    <thead>
-      <tr>
-        <th>ID</th>
-        <th>ORG NAME</th>
-        <th>ORG IDENTIFIER</th>
-        <th>CREATED BY</th>
-        <th>COUNTRY</th>
-        <th>CREATED AT</th>
-        <th>UPDATED AT</th>
-      </tr>
-    </thead>
-    <tbody>
-        <% @organizations.each do |organization| %>
-          <tr class="odd gradeX">
-          <td><%= organization.id%></td>
-          <td><%= organization.org_name%></td>
-          <td><%= organization.org_identifier%></td>
-          <td><%= organization.user.email%></td>
-          <td><%=organization.address.country%></td>
-          <td><%=organization.created_at.strftime("%m/%d/%Y")%></td>
-          <td><%=organization.updated_at.strftime("%m/%d/%Y")%></td>
-          </tr>
-        <% end %>
-    </tbody>
-  </table>
-</div>
+<%= render partial: "organization_table", locals:{organizations: @organizations}%>
 <%= will_paginate(@organizations, renderer: WillPaginate::ActionView::LinkRenderer)
   %>
